--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -38,7 +38,7 @@
                 <li><a href="#la" class="region">Louisiana</a></li>
                 <li><a href="#me" class="region">Maine</a></li>
                 <li><a href="#ml" class="region">Maryland</a></li>
-                <li><a href="#ma" class="region">Massachusets</a></li>
+                <li><a href="#ma" class="region">Massachusetts</a></li>
                 <li><a href="#mi" class="region">Michigan</a></li>
                 <li><a href="#mn" class="region">Minnesota</a></li>
               </ul>
@@ -439,6 +439,14 @@
 <span class="grey">Location:</span> Kansas City, KS<br/>
 <span class="grey">Phone:</span> 913 371 8260<br/>
 <span class="grey">Website:</span> <a href="http://www.keyequipment.com" target="_blank">www.keyequipment.com</a>
+</p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <h4>Mayer Equipment &amp; Supply, LLC</h4>
+<p>
+<span class="grey">Location:</span> Goddard, KS<br/>
+<span class="grey">Phone:</span> 316 794 1165<br/>
+<span class="grey">Website:</span> <a href="http://www.mayerllc.com/" target="_blank">www.mayerllc.com</a>
 </p>
                 </div>
               </div>
