--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -608,7 +608,12 @@
               <h2 id="nj">New Jersey</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-
+                  <h4>Peirce Eagle Equipment Company</h4>
+<p>
+<span class="grey">Location:</span> Branchburg, NJ<br/>
+<span class="grey">Phone:</span> 908 203 0999<br/>
+<span class="grey">Website:</span> <a href="http://www.peirceeagle.com/" target="_blank">www.peirceeagle.com</a>
+</p>
                 </div>
               </div>
               <div class="row text-right">
