--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -626,6 +626,22 @@
               <h2 id="ny">New York</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
+                  <h4>Joe Johnson Equipment</h4>
+<p>
+<span class="grey">Location:</span> Feura Bush, NY<br/>
+<span class="grey">Phone:</span> 518 487 4011<br/>
+<span class="grey">Website:</span> <a href="http://www.jjei.com" target="_blank">www.jjei.com</a>
+</p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <h4>Joe Johnson Equipment</h4>
+<p>
+<span class="grey">Location:</span> Rochester, NY<br/>
+<span class="grey">Phone:</span> 585 254 7700<br/>
+<span class="grey">Website:</span> <a href="http://www.jjei.com" target="_blank">www.jjei.com</a>
+</p>
+                </div>
+                <div class="col-sm-4 dealer">
                   <h4>Spartan Tool LLC</h4>
 <p>
 <span class="grey">Location:</span> Smithtown, NY<br/>
@@ -647,7 +663,7 @@
                   <h4>Jet-Vac Sewer Equipment</h4>
 <p>
 <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
-<span class="grey">Location:</span> Sumter, NC<br/>
+<span class="grey">Location:</span> Sumter, SC<br/>
 <span class="grey">Phone:</span> 800 527 4469<br/>
 <span class="grey">Website:</span> <a href="http://www.jet-vac.com" target="_blank">www.jet-vac.com</a>
 </p>
