working directory page, plus search!

--- a/assets/plugins/mixitup/landing-mix.css
+++ b/assets/plugins/mixitup/landing-mix.css
@@ -4,6 +4,10 @@
   color: #eee;
 }
 
+.landing .controls input{
+  color: #585858;
+}
+
 .landing label{
   font-weight: 300;
   margin: 0 .4em 0 0;
