--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,6 +207,9 @@ p.indent-right {
 .info-table-filter {
   padding: 10px 0;
 }
+.info-table .btn {
+  width:90%;
+}
 ul.navigational li {
   border-left: 1px solid #efefef;
 }
@@ -220,6 +223,9 @@ h2.whr-group {
   letter-spacing: 0;
   font-size: 16px;
   color: #888;
+}
+ul.basic li {
+  padding: 4px 0;
 }
 
 /* Header & Navigation */
@@ -628,18 +634,16 @@ a.list-group-item:hover {
   text-decoration: none;
   background: none;
 }
-.product ul li {
-  padding: 4px 0;
-}
 .product ul.feature-list li {
   border-bottom: 1px dotted #eee;
+  padding: 4px 0;
 }
 .product .tabs {
   display: none;
 } 
 .product .tabs .aside-box {
   background-color:#f8f8f8; 
-  padding:0 25px 25px;
+  padding: 5px 25px 20px 25px;
   text-align: left;
   color: #888;
 }
