Complete to present: 1. WB listing, 2. Product page, 3. Tool manuals v1, 4. Blog structure (HS & footer)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,8 @@
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="/product-catalogs">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/technical-reference">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/manuals">Product Manuals</a><i class="fa fa-angle-right"></i>
+          <li><a href="http://news.stoneagetools.com/topic/product-bulletins">Product Bulletins</a><i class="fa fa-angle-right"></i>
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
@@ -22,7 +23,7 @@
         <ul class="list-unstyled link-list">
           <li><a href="/about">Our Story</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/jobs">Careers</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/news">News</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="http://news.stoneagetools.com">News</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/contact">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
