--- a/_includes/master-slider.html
+++ b/_includes/master-slider.html
@@ -2,6 +2,7 @@
 <!-- Plugin Styles -->
 <link rel="stylesheet" href="../assets/plugins/masterslider/style/masterslider.css">
 <link rel='stylesheet' href="../assets/plugins/masterslider/skins/default/style.css">
+<link rel='stylesheet' href="../assets/plugins/masterslider/skins/light-2/style.css">
 
 <!-- Master Slider -->
 <script src="/assets/plugins/masterslider/masterslider.min.js"></script>
