Add dealers, misc updates

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -1003,7 +1003,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
               <li><a href="#Brazil" class="region">Brazil</a></li>
               <li><a href="#Chile" class="region">Chile</a></li>
               <li><a href="#Colombia" class="region">Colombia</a></li>
-              <li><a href="#Guatemala" class="region">Guatemala</a></li>
               <li><a href="#Mexico" class="region">Mexico</a></li>
             </ul>
           </div>
@@ -1064,6 +1063,17 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                     </p>
                   </div>
                 </div>
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Orbitec</h4>
+                    <p>
+                    <span class="grey">Location:</span> Santiago, Chile<br/>
+                    <span class="grey">Phone:</span> +56-2-2429 4190<br/>
+                    <span class="grey">Website:</span> <a href="http://www.orbitec.cl" target="_blank">www.orbitec.cl</a>
+                    </p>
+                    <small><em>Serving Bolivia, Chile, Ecuador, Peru, and Uruguay</em></small>
+                  </div>
+                </div>
               </div>
               <div class="row text-right">
                 <a href="#top" title="To Top">
@@ -1090,17 +1100,6 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                 <a href="#top" title="To Top">
                   <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
                 </a>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <h2 id="Guatemala">Guatemala</h2>
-              <!-- 1st row -->
-              <div class="row first">
-                <div class="col-sm-4">
-                  <div class="dealer">
-
-                  </div>
-                </div>
               </div>
             </li>
             <li class="list-group-item">
