--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1169,7 +1169,7 @@
 <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
 <span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
 <span class="grey">Phone:</span> (+39) 0427 799505<br/>
-<span class="grey">Website:</span> <a href="www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
+<span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
 </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -1177,7 +1177,7 @@
 <p>
 <span class="grey">Location:</span> Genova, Italy<br/>
 <span class="grey">Phone:</span> (+39) 0106 509422<br/>
-<span class="grey">Website:</span> <a href="www.ptcitaliana.com" target="_blank">www.ptcitaliana.com</a>
+<span class="grey">Website:</span> <a href="http://www.ptcitaliana.com" target="_blank">www.ptcitaliana.com</a>
 </p>
                 </div>
               </div>
@@ -1195,7 +1195,7 @@
 <p>
 <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
 <span class="grey">Phone:</span> (+31) 0186 621484<br/>
-<span class="grey">Website:</span> <a href="www.waterjetting.nl" target="_blank">www.waterjetting.nl</a>
+<span class="grey">Website:</span> <a href="http://www.waterjetting.nl" target="_blank">www.waterjetting.nl</a>
 </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -1203,7 +1203,7 @@
 <p>
 <span class="grey">Location:</span> Tillburg, Netherlands<br/>
 <span class="grey">Phone:</span> (+31) 0135 479100<br/>
-<span class="grey">Website:</span> <a href="www.rioned.com" target="_blank">www.rioned.com</a>
+<span class="grey">Website:</span> <a href="http://www.rioned.com" target="_blank">www.rioned.com</a>
 </p>
                 </div>
               </div>
@@ -1221,7 +1221,7 @@
 <p>
 <span class="grey">Location:</span> Lillesand, Norway<br/>
 <span class="grey">Phone:</span> (+47) 37 26 89 00<br/>
-<span class="grey">Website:</span> <a href="www.gitmark.no" target="_blank">www.gitmark.no</a>
+<span class="grey">Website:</span> <a href="http://www.gitmark.no" target="_blank">www.gitmark.no</a>
 </p>
                 </div>
               </div>
@@ -1239,7 +1239,7 @@
 <p>
 <span class="grey">Location:</span> Malvern, United Kingdom<br/>
 <span class="grey">Phone:</span> (+44) (0) 1684 892065<br/>
-<span class="grey">Website:</span> <a href="www.aquapower.uk.com" target="_blank">www.aquapower.uk.com</a>
+<span class="grey">Website:</span> <a href="http://www.aquapower.uk.com" target="_blank">www.aquapower.uk.com</a>
 </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -1247,7 +1247,15 @@
 <p>
 <span class="grey">Location:</span> Lancashire, United Kingdom<br/>
 <span class="grey">Phone:</span> (+44) (0) 1706 828888<br/>
-<span class="grey">Website:</span> <a href="www.jetchem.com" target="_blank">www.jetchem.com</a>
+<span class="grey">Website:</span> <a href="http://www.jetchem.com" target="_blank">www.jetchem.com</a>
+</p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <h4>Whale Tankers</h4>
+<p>
+<span class="grey">Location:</span> West Midlands, United Kingdom<br/>
+<span class="grey">Phone:</span> +44 (0) 121 704 5700<br/>
+<span class="grey">Website:</span> <a href="http://whale.co.uk/" target="_blank">whale.co.uk</a>
 </p>
                 </div>
               </div>
@@ -1303,7 +1311,7 @@
 <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
 <span class="grey">Location:</span> Victoria, Australia<br/>
 <span class="grey">Phone:</span> (+61) 3 9775 1330<br/>
-<span class="grey">Website:</span> <a href="www.dcsmanufacturing.com.au" target="_blank">www.dcsmanufacturing.com.au</a>
+<span class="grey">Website:</span> <a href="http://www.dcsmanufacturing.com.au" target="_blank">www.dcsmanufacturing.com.au</a>
 </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -1311,7 +1319,7 @@
 <p>
 <span class="grey">Location:</span> Queensland, Australia<br/>
 <span class="grey">Phone:</span> (+61) 1300 781 359<br/>
-<span class="grey">Website:</span> <a href="www.drainchem.com.au" target="_blank">www.drainchem.com.au</a>
+<span class="grey">Website:</span> <a href="http://www.drainchem.com.au" target="_blank">www.drainchem.com.au</a>
 </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -1319,7 +1327,7 @@
 <p>
 <span class="grey">Location:</span> Chipping Norton, Australia<br/>
 <span class="grey">Phone:</span> (+61) 2 9724 0433<br/>
-<span class="grey">Website:</span> <a href="www.seca.com.au" target="_blank">www.seca.com.au</a>
+<span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a>
 </p>
                 </div>
               </div>
