--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -341,18 +341,26 @@
               <!-- 1st row -->
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>PressureJet</h4>
-                  <p><span class="grey">Location:</span> Gujarat, India<br/>
-                  <span class="grey">Phone:</span> (+91) 79 25830762<br/>
-                  <span class="grey">Website:</span> <a href="http://www.pressurejet.com" target="_blank">www.pressurejet.com</a></p>
-                </div>
-                <div class="col-sm-4">
                   <h4>BNM Powerflow Technology Pvt. Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Kolkata, India<br/>
                   <span class="grey">Phone:</span> (+91) 33 22652454<br/>
                   <span class="grey">Website:</span> <a href="http://www.jetvacindia.com" target="_blank">www.jetvacindia.com</a>
                   </p>
+                </div>
+                <div class="col-sm-4">
+                  <h4>GOMA Engineering Pvt. Ltd.</h4>
+                  <p>
+                  <span class="grey">Location:</span> Palghar, India<br/>
+                  <span class="grey">Phone:</span> +91 22 41614161<br/>
+                  <span class="grey">Website:</span> <a href="http://www.goma.co.in" target="_blank">www.goma.co.in</a>
+                  </p>
+                </div>
+                <div class="col-sm-4">
+                  <h4>PressureJet</h4>
+                  <p><span class="grey">Location:</span> Gujarat, India<br/>
+                  <span class="grey">Phone:</span> (+91) 79 25830762<br/>
+                  <span class="grey">Website:</span> <a href="http://www.pressurejet.com" target="_blank">www.pressurejet.com</a></p>
                 </div>
               </div>
               <div class="row text-right">
