--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,8 @@
       </div>
       <div class="col-sm-8 utils">
         <ul class="list-inline">
-          <li><a href="/contact">Contact Us</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/rentals">Rentals</a></li>
           <li><a href="/request-catalog">Request a Catalog</a></li>
           <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
