--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/Rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -29,7 +30,7 @@
 
       <div class="col-sm-3 map-bg padding-right-60">
         <div class="section-heading">
-          <h3>Contact Us</h3>
+          <h3>Get In Touch</h3>
         </div>
         <address>
             466 South Skylane Drive <br />
