--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,11 +28,13 @@
         </ul>
       </div>
 
-      <div class="col-sm-3 map-bg padding-right-60">
-        <div class="section-heading">
-          <h3>Get In Touch</h3>
-        </div>
-        <address>
+      <div class="col-sm-3 padding-right-60 margin-top-30">
+        
+      </div>
+
+      <div class="col-sm-3 map-bg">
+        <a href="/"><img class="footer-logo" src="assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
+        <address style="padding-left:50px; padding-top:20px;">
             466 South Skylane Drive <br />
             Durango, CO 81303 <br />
             Phone: +1 970 259 2869 <br />
@@ -40,10 +42,6 @@
             <a href="/contact"><i class="fa fa-envelope"></i> Send us an e-mail</a><br>
             <a href="/subscribe"><i class="fa fa-paper-plane"></i> Subscribe to E-Blasts</a>
         </address>
-      </div>
-
-      <div class="col-sm-3">
-        <a href="/"><img class="footer-logo" src="assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
       </div>
 
     </div>
