--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/Rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
