--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -111,11 +111,13 @@
     display: none;
   }
 }
-
 @media screen and (max-width: 480px) {
   .utilities .col-sm-4, .utilities .col-sm-8 {
     display: none;
   }
+.main-nav .navbar-nav>li, .main-nav .navbar-nav>li:first-child {
+  border: none;
+}
   .btn.contact {
     font-size: 3.6vw;
   }
