--- a/assets/css/tabs.css
+++ b/assets/css/tabs.css
@@ -1,5 +1,6 @@
 /* Default tab style */
 
+/*
 @font-face {
 	font-weight: normal;
 	font-style: normal;
@@ -10,6 +11,7 @@
 		url('../fonts/stroke7pixeden/stroke7pixeden.ttf?u58ytb') format('truetype'),
 		url('../fonts/stroke7pixeden/stroke7pixeden.svg?u58ytb#stroke7pixeden') format('svg');
 }
+*/
 
 .tabs {
 	position: relative;
@@ -94,7 +96,7 @@
 	font-weight: normal;
 	font-variant: normal;
 	font-size: 1.3em;
-	font-family: 'stroke7pixeden';
+/*	font-family: 'stroke7pixeden';*/
 	line-height: 1;
 	speak: none;
 	-webkit-backface-visibility: hidden;
@@ -275,3 +277,41 @@
 		font-size: 0.6em;
 	}
 }
+
+
+/*****************************/
+/* Bar */
+/*****************************/
+
+.tabs-style-bar nav {
+/*	background: rgba(40,44,42,0.05);*/
+}
+
+.tabs-style-bar nav ul {
+	border: 4px solid transparent;
+}
+
+.tabs-style-bar nav ul li a {
+	margin: 0 2px;
+	background-color: #F2F2F3;
+	color: #74777b;
+	transition: background-color 0.2s, color 0.2s;
+}
+
+.tabs-style-bar nav ul li a:hover,
+.tabs-style-bar nav ul li a:focus {
+	color: #9c8061;
+}
+
+.tabs-style-bar nav ul li a span {
+	text-transform: uppercase;
+	letter-spacing: .05rem;
+	font-weight: 500;
+	font-size: .8em;
+}
+
+.tabs-style-bar nav ul li.tab-current a {
+	background: #d9d5d2;
+	color: #fff;
+}
+
