--- a/assets/css/tabs.css
+++ b/assets/css/tabs.css
@@ -310,8 +310,31 @@
 	font-size: .8em;
 }
 
-.tabs-style-bar nav ul li.tab-current a {
+.tabs-style-bar nav li.tab-current a {
 	background: #d9d5d2;
 	color: #fff;
 }
 
+.tabs-style-bar nav li.tab-current:after, 
+.tabs-style-bar nav li.tab-current:before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: solid transparent;
+	content: '';
+	pointer-events: none;
+}
+
+.tabs-style-bar nav ul li.tab-current:after {
+	margin-left: -10px;
+	border-width: 10px;
+	border-top-color: #d9d5d2;
+}
+
+.tabs-style-bar nav ul li.tab-current:before {
+	margin-left: -11px;
+	border-width: 11px;
+	border-top-color: #d9d5d2;
+}
