--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1094,6 +1094,7 @@
               <li><a href="#sw-Italy" class="region">Italy</a></li>
               <li><a href="#sw-Netherlands" class="region">Netherlands</a></li>
               <li><a href="#sw-Norway" class="region">Norway</a></li>
+              <li><a href="#sw-Poland" class="region">Poland</a></li>
               <li><a href="#sw-UK" class="region">United Kingdom</a></li>
             </ul>
           </div>
@@ -1223,6 +1224,24 @@
 <span class="grey">Phone:</span> (+47) 37 26 89 00<br/>
 <span class="grey">Website:</span> <a href="http://www.gitmark.no" target="_blank">www.gitmark.no</a>
 </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-Poland">Poland</h2>
+              <div class="row first">
+                <div class="col-sm-4">
+                  <h4>Kanro</h4>
+                  <p>
+                  <span class="grey">Location:</span> Białystok, Poland<br/>
+                  <span class="grey">Phone:</span> (+48) 85 749 51 55<br/>
+                  <span class="grey">Website:</span> <a href="http://www.kanro.pl" target="_blank">www.kanro.pl</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
