--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,7 +42,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span> 
         </button>
-        <a class="navbar-brand" href="/"><img src="/assets/img/stoneage_logo.png" class="img-responsive"></a>
+        <a class="navbar-brand" href="/"><img src="/assets/img/stoneage_logo.png" class="img-responsive" alt="StoneAge waterblast tools"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
