updated rentals header

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1014,12 +1014,13 @@
         <div id="sw-canada" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-canada">
           <div class="dealers-by-region">
             <ul class="list-inline">
-              <li><a href="#Alberta" class="region">Alberta</a></li>
+<!--              <li><a href="#Alberta" class="region">Alberta</a></li>-->
               <li><a href="#bc" class="region">British Columbia</a></li>
               <li><a href="#Ontario" class="region">Ontario</a></li>
             </ul>
           </div>
           <ul class="list-group">
+<!--
             <li class="list-group-item">
               <h2 id="Alberta">Alberta</h2>
               <div class="row first">
@@ -1038,6 +1039,7 @@
                 </a>
               </div>
             </li>
+-->
             <li class="list-group-item">
               <h2 id="bc">British Columbia</h2>
               <div class="row first">
