many misc updates

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1194,11 +1194,11 @@
               <h2 id="sw-Netherlands">Netherlands</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <h4>Derc Salotech International B.V.</h4>
+                  <h4>DERC Salotech</h4>
 <p>
 <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
 <span class="grey">Phone:</span> (+31) 0186 621484<br/>
-<span class="grey">Website:</span> <a href="http://www.waterjetting.nl" target="_blank">www.waterjetting.nl</a>
+<span class="grey">Website:</span> <a href="http://www.waterjetting.nl/Salotech-Sewer-Cleaning" target="_blank">www.salotech.nl</a>
 </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -1346,9 +1346,28 @@
                 <div class="col-sm-4 dealer">
                 <h4>Sewer Equipment Co.</h4>
 <p>
-<span class="grey">Location:</span> Chipping Norton, Australia<br/>
-<span class="grey">Phone:</span> (+61) 2 9724 0433<br/>
+<span class="grey">Location:</span> Queensland, Australia<br/>
+<span class="grey">Phone:</span> (+61) 7 3396 1777<br/>
 <span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a>
+</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 dealer">
+                <h4>Sewer Equipment Co.</h4>
+<p>
+<span class="grey">Location:</span> Victoria, Australia<br/>
+<span class="grey">Phone:</span> (+61) 4 1436 1897<br/>
+<span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a>
+</p>
+                </div>
+                <div class="col-sm-4 dealer">
+                    <h4>Spoutvac Industries Pty Ltd</h4>
+<p>
+<!--<span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />-->
+<span class="grey">Location:</span> Victoria, Australia<br/>
+<span class="grey">Phone:</span> (+61) 3 5443 4033<br/>
+<span class="grey">Website:</span> <a href="http://www.spoutvac.com.au/" target="_blank">www.spoutvac.com.au</a>
 </p>
                 </div>
               </div>
