--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,6 +25,9 @@
           <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
         </ul>
+        <form action="search">
+          <input type="text" name="q" id="tipue_search_input" autocomplete="off" required>
+        </form>
       </div>
       <!-- Mobile only contact -->
       <div class="col-sm-12 mobile-contact">
