--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,10 +24,15 @@
           <li><a href="/request-catalog">Request a Catalog</a></li>
           <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+          <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search.png" alt="Search" style="margin-top:-4px;" /></a></li>
         </ul>
-        <form action="search">
-          <input type="text" name="q" id="tipue_search_input" autocomplete="off" required>
-        </form>
+        
+        <div class="lightbox" id="search-box">
+          <form action="search">
+            <input type="text" name="q" id="tipue_search_input" autocomplete="off" placeholder="What are we looking for?">
+          </form>
+        </div>
+        
       </div>
       <!-- Mobile only contact -->
       <div class="col-sm-12 mobile-contact">
