service kit catch-up, search/lightbox snag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   
   <!-- Plugin Styles -->
+  <link href="/assets/plugins/tipuesearch/tipuesearch.css" type="text/css" rel="stylesheet"><!-- Tipue Search -->
   <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" /><!-- Lighbox -->
-  <link href="/assets/plugins/tipuesearch/tipuesearch.css" rel="stylesheet"><!-- Tipue Search -->
 </head>
