--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,9 +65,12 @@
 
 
   <!--*** Scripts ***-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="/assets/plugins/featherlight/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="//cdn.rawgit.com/noelboss/featherlight/1.6.1/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>-->
+
   <!-- Tipue Search -->
   <script src="/assets/plugins/tipuesearch/tipuesearch_content.js"></script>
   <script src="/assets/plugins/tipuesearch/tipuesearch_set.js"></script>
