update dealer info

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -675,7 +675,7 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                   <p>
                   <span class="grey">Location:</span> Esbjerg, Denmark<br/>
                   <span class="grey">Phone:</span> (+45) 75 15 97 00<br/>
-                  <span class="grey">Website:</span> <a href="http://www.aquatool.dk" target="_blank">www.aquatool.dk</a>
+                  <span class="grey">Website:</span> <a href="http://www.sihm.dk" target="_blank">www.sihm.dk</a>
                   </p>
                 </div>
               </div>
