redirect fix and update dealer list

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1062,11 +1062,11 @@
               <h2 id="Ontario">Ontario</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <h4>Novajet, Inc.</h4>
+                  <h4>Joe Johnson Equipment</h4>
 <p>
-<span class="grey">Location:</span> Concord, Ontario, Canada<br/>
-<span class="grey">Phone:</span> (+1) 905 532 0227<br/>
-<span class="grey">Website:</span> <a href="http://www.novajetinc.com" target="_blank">www.novajetinc.com</a>
+<span class="grey">Location:</span> Innisfil, Ontario, Canada<br/>
+<span class="grey">Phone:</span> (+1) 705-733-77007<br/>
+<span class="grey">Website:</span> <a href="http://www.jjei.com" target="_blank">www.jjei.com</a>
 </p>
                 </div>
               </div>
