ABX-3L launch updates

--- a/_includes/master-slider.html
+++ b/_includes/master-slider.html
@@ -27,3 +27,10 @@
   $('#accordion').on('shown.bs.collapse', toggleCaret);
 </script>
 {% endif %}
+
+<!-- Bootstrap tooltips -->
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+});
+</script>
