--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,6 +235,30 @@ h2.whr-group {
   font-weight: 800;
   padding: 4px 0 0 50px;
 }
+.accessories {
+  margin-bottom: 30px;
+  text-align: right;
+}
+.accessories h3 {
+  display: inline-block;
+  margin-top: 0;
+  padding-top: 0;
+  margin-right: 10px;
+  line-height: 3rem;
+}
+.accessories a.btn {
+  display: inline-block;
+  background-color: #888;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 8px;
+  border-radius: 4px;
+  margin-top: 5px;
+}
+.accessories a.btn:hover {
+  background-color: #555;
+}
 
 /* Header & Navigation */
 .navbar .utilities {
