--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -929,11 +929,10 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
               <h2 id="UK">United Kingdom</h2>
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>Aquapower Ltd.</h4>
+                  <h4>StoneAge Europe</h4>
                   <p>
                   <span class="grey">Location:</span> Malvern, United Kingdom<br/>
-                  <span class="grey">Phone:</span> (+44) (0) 1684 892065<br/>
-                  <span class="grey">Website:</span> <a href="http://www.aquapower.uk.com" target="_blank">www.aquapower.uk.com</a>
+                  <span class="grey">Phone:</span> (+44) (0) 1684 892065
                   </p>
                 </div>
               </div>
