--- a/_includes/contact-durango.html
+++ b/_includes/contact-durango.html
@@ -6,7 +6,7 @@
     var mapOptions = {
       center: new google.maps.LatLng(37.1993803,-107.8716067),
       zoom: 8,
-      mapTypeId: google.maps.MapTypeId.HYBRID,
+      mapTypeId: google.maps.MapTypeId.TERRAIN,
       scrollwheel: false,
       draggable: true,
       panControl: true,
