--- a/_includes/contact-europe.html
+++ b/_includes/contact-europe.html
@@ -1,11 +1,11 @@
-{% if page.contact-houston %}
+{% if page.contact-europe %}
 <!--Google Maps API-->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnycWatbGyK6ldFqErjFtko1yeMclNUOA&amp;sensor=true"></script>
 <script>
   function initialize() {
     var mapOptions = {
-      center: new google.maps.LatLng(29.680113,-95.1667929),
-      zoom: 8,
+      center: new google.maps.LatLng(52.1267887,-2.3032028),
+      zoom: 7,
       mapTypeId: google.maps.MapTypeId.TERRAIN,
       scrollwheel: false,
       draggable: true,
@@ -18,7 +18,7 @@
       rotateControl: true,
     };
     var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-    var contentString = 'StoneAge Houston &bull; 2150 Pansy St. &bull; Pasadena, TX 77503';
+    var contentString = 'StoneAge Europe &bull; Malvern, UK';
     var infowindow = new google.maps.InfoWindow({
       content: contentString
     });
