--- a/_includes/contact-la.html
+++ b/_includes/contact-la.html
@@ -6,7 +6,7 @@
     var mapOptions = {
       center: new google.maps.LatLng(30.2112627,-90.9894516),
       zoom: 8,
-      mapTypeId: google.maps.MapTypeId.HYBRID,
+      mapTypeId: google.maps.MapTypeId.TERRAIN,
       scrollwheel: false,
       draggable: true,
       panControl: true,
