--- a/_includes/contact-ohio.html
+++ b/_includes/contact-ohio.html
@@ -6,7 +6,7 @@
     var mapOptions = {
       center: new google.maps.LatLng(41.315634,-81.779663),
       zoom: 8,
-      mapTypeId: google.maps.MapTypeId.HYBRID,
+      mapTypeId: google.maps.MapTypeId.TERRAIN,
       scrollwheel: false,
       draggable: true,
       panControl: true,
