--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,6 +88,7 @@
   {% include contact-houston.html %}
   {% include contact-ohio.html %}
   {% include contact-la.html %}
+  {% include contact-europe.html %}
 
   <!-- landing page script dependencies -->
   {% include landing.html %}
