--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -140,18 +140,6 @@
                     </p>
                   </div>
                 </div>
-<!--
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>PSI Pressure Systems</h4>
-                    <p>
-                    <span class="grey">Location:</span> Baytown, Texas<br/>
-                    <span class="grey">Phone:</span> 281-420-5055<br/>
-                    <span class="grey">Website:</span> <a href="http://www.psipressuresystems.com/" target="_blank">www.psipressuresystems.com</a>
-                    </p>
-                  </div>
-                </div>
--->
               </div>
               <div class="row text-right">
                 <a href="#top" title="To Top">
@@ -506,18 +494,14 @@
             <div class="dealers-by-region col-sm-2">
               <ul class="list-unstyled">
                 <li><a href="#Austria" class="region">Austria</a></li>
-                <li><a href="#Belgium" class="region">
-Belgium</a></li>
-                <li><a href="#Czech" class="region">
-Czech Republic</a></li>
-                <li><a href="#Denmark" class="region">
-Denmark</a></li>
+                <li><a href="#Belgium" class="region">Belgium</a></li>
+                <li><a href="#Czech" class="region">Czech Republic</a></li>
+                <li><a href="#Denmark" class="region">Denmark</a></li>
               </ul>
             </div>
             <div class="dealers-by-region col-sm-2">
               <ul class="list-unstyled">
-                <li><a href="#Finland" class="region">
-Finland</a></li>
+                <li><a href="#Finland" class="region">Finland</a></li>
                 <li><a href="#France" class="region">France</a></li>
                 <li><a href="#Germany" class="region">Germany</a></li>
                 <li><a href="#Greece" class="region">Greece</a></li>
