--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1056,6 +1056,14 @@
               <h2 id="sw-Denmark">Denmark</h2>
               <div class="row first">
                 <div class="col-sm-4">
+                  <h4>C-TV Tekniske Artikler A/S</h4>
+                  <p>
+                  <span class="grey">Location:</span> Aalborg, Denmark<br/>
+                  <span class="grey">Phone:</span> (+45) 75 15 97 00<br/>
+                  <span class="grey">Website:</span> <a href="http://c-tv.dk/" target="_blank">c-tv.dk</a>
+                  </p>
+                </div>
+                <div class="col-sm-4">
                   <h4>Sihm Hojtryk A/S</h4>
                   <p>
                   <span class="grey">Location:</span> Esbjerg, Denmark<br/>
