--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -222,19 +222,6 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>ShangHai Dingxin Water Jet Tech</h4>
-                    <p>
-                    <span class="grey">Location:</span> Shanghai, China<br/>
-                    <span class="grey">Phone:</span> (+86) 21 3955 7258<br/>
-                    <span class="grey">Website:</span> <a href="http://www.dx-wjt.com" target="_blank">www.dx-wjt.com</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <!-- 2nd row -->
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="dealer">
                     <h4>Shanghai Gaoao Environmental Science and Technology Co., Ltd</h4>
                     <p>
                     <span class="grey">Location:</span> Shanghai, China<br/>
@@ -243,6 +230,9 @@
                     </p>
                   </div>
                 </div>
+              </div>
+              <!-- 2nd row -->
+              <div class="row">
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>SpirStar China Co., Ltd</h4>
@@ -263,9 +253,6 @@
                     </p>
                   </div>
                 </div>
-              </div>
-              <!-- 3rd row -->
-              <div class="row">
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Wealth-Shape Investments, Ltd</h4>
@@ -287,26 +274,12 @@
               <!-- 1st row -->
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>BNM Powerflow Technology Pvt. Ltd</h4>
-                  <p>
-                  <span class="grey">Location:</span> Kolkata, India<br/>
-                  <span class="grey">Phone:</span> (+91) 33 22652454<br/>
-                  <span class="grey">Website:</span> <a href="http://www.jetvacindia.com" target="_blank">www.jetvacindia.com</a>
-                  </p>
-                </div>
-                <div class="col-sm-4">
                   <h4>GOMA Engineering Pvt. Ltd.</h4>
                   <p>
                   <span class="grey">Location:</span> Palghar, India<br/>
                   <span class="grey">Phone:</span> +91 22 41614161<br/>
                   <span class="grey">Website:</span> <a href="http://www.goma.co.in" target="_blank">www.goma.co.in</a>
                   </p>
-                </div>
-                <div class="col-sm-4">
-                  <h4>PressureJet</h4>
-                  <p><span class="grey">Location:</span> Gujarat, India<br/>
-                  <span class="grey">Phone:</span> (+91) 79 25830762<br/>
-                  <span class="grey">Website:</span> <a href="http://www.pressurejet.com" target="_blank">www.pressurejet.com</a></p>
                 </div>
               </div>
               <div class="row text-right">
@@ -580,11 +553,11 @@
               <h2 id="Iceland">Iceland</h2>
               <div class="row">
                 <div class="col-sm-4">
-                  <h4>Nuova Contec SRL</h4>
+                  <h4>Heimir &amp; Larus</h4>
                   <p>
-                  <span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
-                  <span class="grey">Phone:</span> (+39) 0427 799505<br/>
-                  <span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
+                  <span class="grey">Location:</span> Gardebaer, Iceland<br/>
+                  <span class="grey">Phone:</span> +354-564-1888<br/>
+                  <span class="grey">E-mail:</span> <a href="mailto:larus@heilar.is" target="_blank">larus@heilar.is</a>
                   </p>
                 </div>
               </div>
