--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -706,12 +706,14 @@
 <span class="grey">Website:</span> <a href="http://www.ahequipment.com" target="_blank">www.ahequipment.com</a>
 </p>
                 </div>
+                <div class="col-sm-4 dealer">
                 <h4>A &amp; H Equipment Company</h4>
 <p>
 <span class="grey">Location:</span> Harrisburg, PA<br/>
 <span class="grey">Phone:</span> 717 724 0310<br/>
 <span class="grey">Website:</span> <a href="http://www.ahequipment.com" target="_blank">www.ahequipment.com</a>
 </p>
+                </div>
               </div>
               <div class="row text-right">
                 <a href="#top" title="To Top">
@@ -903,7 +905,7 @@
               <h2 id="sw-India">India</h2>
               <!-- 1st row -->
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Whale Tankers</h4>
                   <p>
                   <span class="grey">Location:</span> West Midlands, United Kingdom<br/>
@@ -1055,7 +1057,7 @@
             <li class="list-group-item">
               <h2 id="sw-Denmark">Denmark</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>C-TV Tekniske Artikler A/S</h4>
                   <p>
                   <span class="grey">Location:</span> Aalborg, Denmark<br/>
@@ -1063,7 +1065,7 @@
                   <span class="grey">Website:</span> <a href="http://c-tv.dk/" target="_blank">c-tv.dk</a>
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Sihm Hojtryk A/S</h4>
                   <p>
                   <span class="grey">Location:</span> Esbjerg, Denmark<br/>
@@ -1081,7 +1083,7 @@
             <li class="list-group-item">
               <h2 id="sw-Germany">Germany</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Gerotec GmbH</h4>
                   <p>
                   <span class="grey">Location:</span> Neuried, Munich<br/>
@@ -1099,7 +1101,7 @@
             <li class="list-group-item">
               <h2 id="sw-Italy">Italy</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Nuova Contec srl</h4>
                   <p>
                   <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
@@ -1118,7 +1120,7 @@
             <li class="list-group-item">
               <h2 id="sw-Netherlands">Netherlands</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Rior B.V./Rioned</h4>
                   <p>
                   <span class="grey">Location:</span> Tillburg, Netherlands<br/>
@@ -1136,7 +1138,7 @@
             <li class="list-group-item">
               <h2 id="sw-Norway">Norway</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>AquaTeq Sweden AB</h4>
                   <p>
                   <span class="grey">Location:</span> Kalmar, Norway<br/>
@@ -1154,7 +1156,7 @@
             <li class="list-group-item">
               <h2 id="sw-Poland">Poland</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Kanro</h4>
                   <p>
                   <span class="grey">Location:</span> Białystok, Poland<br/>
@@ -1172,7 +1174,7 @@
             <li class="list-group-item">
               <h2 id="sw-UK">United Kingdom</h2>
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Jetchem Systems</h4>
                   <p>
                   <span class="grey">Location:</span> Lancashire, United Kingdom<br/>
@@ -1180,7 +1182,7 @@
                   <span class="grey">Website:</span> <a href="http://www.jetchem.com" target="_blank">www.jetchem.com</a>
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Whale Tankers</h4>
                   <p>
                   <span class="grey">Location:</span> West Midlands, United Kingdom<br/>
@@ -1212,7 +1214,7 @@
 <!--              <h2 id="Turkey">Turkey</h2>-->
               <!-- 1st row -->
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Whale Tankers</h4>
                   <p>
                   <span class="grey">Location:</span> West Midlands, United Kingdom<br/>
