--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -273,7 +273,7 @@
               <h2 id="india">India</h2>
               <!-- 1st row -->
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>GOMA Engineering Pvt. Ltd.</h4>
                   <p>
                   <span class="grey">Location:</span> Palghar, India<br/>
@@ -291,7 +291,7 @@
             <li class="list-group-item">
               <h2 id="japan">Japan</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>NLC Co. Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Taito-ku, Tokyo<br/>
@@ -309,7 +309,7 @@
             <li class="list-group-item">
               <h2 id="korea">Korea</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>BC Taechang Industrial Corp.</h4>
                   <p>
                   <span class="grey">Location:</span> Kimhae, Korea<br/>
@@ -317,14 +317,14 @@
                   <span class="grey">Website:</span> <a href="http://www.bcinternational.co.kr" target="_blank">www.bcinternational.co.kr</a>
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>JN Korea</h4>
                   <p>
                   <span class="grey">Location:</span> Yeosu, Junnam, Korea<br/>
                   <span class="grey">Phone:</span> (+82) 61 723 4771
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Kiwon enTec Co., Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Gimposi, Kyunggido, Korea<br/>
@@ -342,7 +342,7 @@
             <li class="list-group-item">
               <h2 id="singapore">Singapore</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Asia Waterjet Equipment Pte. Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> WCEGA Plaza, Singapore<br/>
@@ -350,7 +350,7 @@
                   <span class="grey">Website:</span> <a href="http://www.asiawaterjet.com" target="_blank">www.asiawaterjet.com</a>
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>DEN-SIN</h4>
                   <p>
                   A division of Nilfisk-Advance A/S<br/>
@@ -359,7 +359,7 @@
                   <span class="grey">Website:</span> <a href="http://www.densin.com" target="_blank">www.densin.com</a>
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Klenco (Singapore) Pte Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Singapore<br/>
@@ -377,7 +377,7 @@
             <li class="list-group-item">
               <h2 id="taiwan">Taiwan</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Hsiang Yu Machinery Co. Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Taiwan, ROC<br/>
@@ -385,14 +385,14 @@
                   <span class="grey">Website:</span> <a href="http://www.hyum.com.tw" target="_blank">www.hyum.com.tw</a>
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Jian-He International Co., Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Taipei, Taiwan<br/>
                   <span class="grey">Phone:</span> (+886) 2 27212511
                   </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Pumpson Systems, Inc.</h4>
                   <p>
                   <span class="grey">Location:</span> Taiwan, ROC<br/>
@@ -410,7 +410,7 @@
             <li class="list-group-item">
               <h2 id="thailand">Thailand</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Boonyanuch Engineering Co., Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Rayong, Thailand<br/>
@@ -480,7 +480,7 @@
             <li class="list-group-item">
               <h2 id="Cyprus">Cyprus</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Combijet Manufacturing Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Ayios Athanasios Industrial Area, Cyprus<br/>
@@ -498,7 +498,7 @@
             <li class="list-group-item">
               <h2 id="Denmark">Denmark</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Sihm Hojtryk A/S</h4>
                   <p>
                   <span class="grey">Location:</span> Esbjerg, Denmark<br/>
@@ -516,7 +516,7 @@
             <li class="list-group-item">
               <h2 id="Finland">Finland</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Aquajet Systems AB</h4>
                   <p>
                   <span class="grey">Location:</span> Holsbybrunn, Sweden<br/>
@@ -534,7 +534,7 @@
             <li class="list-group-item">
               <h2 id="Germany">Greece</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Vlachakis Systems</h4>
                   <p>
                   <span class="grey">Location:</span> Athens, Greece<br/>
@@ -552,7 +552,7 @@
             <li class="list-group-item">
               <h2 id="Iceland">Iceland</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Heimir &amp; Larus</h4>
                   <p>
                   <span class="grey">Location:</span> Gardebaer, Iceland<br/>
@@ -570,7 +570,7 @@
             <li class="list-group-item">
               <h2 id="Italy">Italy</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Nuova Contec SRL</h4>
                   <p>
                   <span class="grey">Location:</span> Montereale Valcellina, Italy<br/>
@@ -588,7 +588,7 @@
             <li class="list-group-item">
               <h2 id="Norway">Norway</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Pump Supply AS</h4>
                   <p>
                   <span class="grey">Location:</span> Solbergelva, Norway<br/>
@@ -606,7 +606,7 @@
             <li class="list-group-item">
               <h2 id="Poland">Poland</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Tech-Trading</h4>
                   <p>
                   <span class="grey">Location:</span> Chorzów, Poland<br/>
@@ -624,7 +624,7 @@
             <li class="list-group-item">
               <h2 id="Romania">Romania</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>GIMSID S.R.L.</h4>
                   <p>
                   <span class="grey">Location:</span> Bucharest, Romania<br/>
@@ -642,7 +642,7 @@
             <li class="list-group-item">
               <h2 id="Spain">Spain</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Motorrens S.L.</h4>
                   <p>
                   <span class="grey">Location:</span> Reus, Spain<br/>
@@ -660,7 +660,7 @@
             <li class="list-group-item">
               <h2 id="Sweden">Sweden</h2>
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 dealer">
                   <h4>Aquajet Systems AB</h4>
                   <p>
                   <span class="grey">Location:</span> Holsbybrunn, Sweden<br/>
